base static layout of the homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,8 +41,6 @@
 				Have a look at your current business and see how you would make the digital transformation.
 				Without buggy custom software, fragile excel sheets, error prone manual data entry or expensive, inflexible legacy software. Just everything you need, when you need it. Nothing more, nothing less.
 			</p>
-
-
 		</section>
 
 
@@ -50,6 +48,110 @@
 			<span>Just everything you need,<br>When you need it.</span>
 		</div>
 
+		<section>
+			<h2>The way we work</h2>
+			<blockquote>
+				It's so easy, a kid can do the laundry.
+				<span>Mr. Client</span>
+			</blockquote>
+			<p>
+				Have a look at your current business and see how you would make the digital transformation.
+				Without buggy custom software, fragile excel sheets, error prone manual data entry or expensive, inflexible legacy software. Just everything you need, when you need it. Nothing more, nothing less.
+			</p>
+		</section>
+
+
+		<a name="prototyping"></a>
+		<ul class="progress-strip">
+			<li style="z-index: 5;" class="active"><a href="#prototyping">Prototyping</a></li>
+			<li style="z-index: 4;"><a href="#design-session">Design Session</a></li>
+			<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
+			<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
+			<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
+		</ul>
+		<section>
+			<h3>Prototyping</h3>
+			<p><img src="assets/prototyping.jpg">A prototyping session can take up from a few hours to a full day, depending on the complexity of your domain.</p>
+			<p>During the prototyping session you will see the core of your business process clearly, in a working prototype, multiple times during the session. By the end of the session you will know what is possible and be eager to finish what we started. We will plan a design session as soon as possible.</p>
+		</section>
+
+
+		<a name="design-session"></a>
+		<ul class="progress-strip blue">
+			<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
+			<li style="z-index: 4;" class="active"><a href="#design-session">Design Session</a></li>
+			<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
+			<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
+			<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
+		</ul>
+		<section>
+			<h3>Design Session</h3>
+			<p><img src="assets/design-session.jpg">During the design session of a week we will get to the parts we had to skip during the prototyping session.</p>
+			<p>We will focus on getting all relevant parts in your Kjerner system and making sure we solve the problems you would like to see solved. Domain experts will need to be available for a few sessions during the week and available for questions most of the time. After a week, we will have valuable software that fits your needs perfectly, ready for deployment in the cloud or on-premise. If you need more, we can schedule a new design session right away - this will only happen for more complex domains.</p>
+		</section>
+
+
+		<a name="integrations"></a>
+		<ul class="progress-strip">
+			<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
+			<li style="z-index: 4;"><a href="#design-session">Design Session</a></li>
+			<li style="z-index: 3;" class="active"><a href="#integrations">Integrations</a></li>
+			<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
+			<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
+		</ul>
+		<section>
+			<h3>Integrations</h3>
+			<p><img src="assets/integrations.jpg">Connections to your running sofware you want to keep and migrations from the legacy systems you would like to stop using are a common need. We are experienced in rapidly creating a connection to legacy software. Think days or weeks, depending on the complexity.</p>
+			<p>We can plan one or more sessions right after or in parallel to the first design session to have them at go live, or plan to do them later on as well. Your Kjerner system stays flexible and can be changed and extended at any time.</p>
+		</section>
+
+
+		<a name="up-running"></a>
+		<ul class="progress-strip blue">
+			<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
+			<li style="z-index: 4;"><a href="#design-session">Design Session</a></li>
+			<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
+			<li style="z-index: 2;" class="active"><a href="#up-running">Up&Running</a></li>
+			<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
+		</ul>
+		<section>
+			<h3>Up&Running</h3>
+			<p><img src="assets/running.jpg">When you are satisfied with the results and want to start using your new software, you can go right ahead.</p>
+			<p>You can provide your own on-premise virtual server for us to use or have us start a cloud service for you. You will pay a monthly or yearly fee to cover license, maintenance and hosting costs. Multiple plans available.</p>
+		</section>
+
+
+		<a name="snapshots"></a>
+		<ul class="progress-strip">
+			<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
+			<li style="z-index: 4;"><a href="#design-session">Design Session</a></li>
+			<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
+			<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
+			<li style="z-index: 1;" class="active"><a href="#snapshots">Snapshots</a></li>
+		</ul>
+		<section>
+			<h3>Snapshots</h3>
+			<p><img src="assets/snapshot.jpg">Get together with us on a regular basis and take a snapshot of your current needs and how well they match with a picture of the systems you have running.</p>
+			<p>When the pictures do not correspond, let us fix it with precision and speed, without lead time, risks nor high costs.</p>
+		</section>
+
+		<h2 class="centered">Customers we helped make the digital transformation</h2>
+		<ul class="logos">
+			<li><img src="assets/logos/sapa.png" alt="SAPA"></li>
+			<li><img src="assets/logos/hydro.png" alt="Hydro"></li>
+			<li><img src="assets/logos/axa.png" alt="Axa"></li>
+			<li><img src="assets/logos/allegion.png" alt="Allegion"></li>
+			<li><img src="assets/logos/tata.png" alt="Tata"></li>
+		</ul>
+
+
+		<footer>
+			<h3>Let us show you what we can do in just a few hours</h3>
+			<p>
+				Please contact us for a prototyping session.<br>
+				Send us an email at <a href="mailto:info@kjerner.com">info@kjerner.com</a> or use the chatbox.
+			</p>
+		</footer>
 
 	</body>
 </html>
