second small menu when scrolled down

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,22 @@
 			</nav>
 		</header>
 
+		<nav class="small-header" aria-hidden="true">
+			<img src="assets/logo.svg">
+			<ul>
+				<li><a href="#">Solutions</a></li>
+				<li><a href="#">Products</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Company</a></li>
+				<li><a href="#">Platform</a></li>
+			</ul>
+			<ul class="secondary">
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">Service</a></li>
+			</ul>
+		</nav>
+
+
 		<div class="banner blue1">
 			<span>Get to the core of what you do</span>
 		</div>
@@ -153,5 +169,7 @@
 			</p>
 		</footer>
 
+
+	{% include scripts.html %}
 	</body>
 </html>
