--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -182,6 +182,20 @@ blockquote {
 		background: url('../assets/balloon-pointer.svg') left bottom no-repeat;
 		background-size: 1600px 48px;
 	}
+
+	transition: all .3s ease-out;
+	&:not(.top-in-view) {
+		opacity: 0;
+		transform: scale(.2) rotate(-15deg);
+	}
+	&.top-in-view {
+		opacity: .5;
+		transform: scale(.6) rotate(0deg);
+	}
+	&.bottom-in-view {
+		opacity: 1;
+		transform: scale(1) rotate(0deg);
+	}
 }
 
 
