--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 {% include head.html %}
 	<body>
 
-		<header>
+		<header aria-hidden="true">
 			<img src="assets/logo.svg">
 
 			<nav>
@@ -12,8 +12,7 @@
 						{% if item.category == "main" %}
 
 							{% assign item_url = item.url | remove_first: "/pages/" %}
-							{% assign item_section = item_url | remove: "/" %}
-							<li class="{% if item.url == page.url %}current{% endif %} {% if item_section == page_section %}current-section{% endif %} {% if item_section == page.category %}current-section{% endif %}">
+							<li class="{% if item.url == page.url %}current{% endif %}">
 								<a href="{{ item.url | relative_url }}">{{ item.title }}</a>
 							</li>
 						{% endif %}
@@ -25,26 +24,6 @@
 				</ul>
 			</nav>
 		</header>
-
-		<nav class="small-header" aria-hidden="true">
-			<img src="assets/logo.svg">
-			<ul>
-				{% for item in site.pages %}
-					{% if item.category == "main" %}
-
-						{% assign item_url = item.url | remove_first: "/pages/" %}
-						{% assign item_section = item_url | remove: "/" %}
-						<li class="{% if item.url == page.url %}current{% endif %} {% if item_section == page_section %}current-section{% endif %} {% if item_section == page.category %}current-section{% endif %}">
-							<a href="{{ item.url | relative_url }}">{{ item.title }}</a>
-						</li>
-					{% endif %}
-				{% endfor %}
-			</ul>
-			<ul class="secondary">
-				<li><a href="#">Contact</a></li>
-				<li><a href="#">Service</a></li>
-			</ul>
-		</nav>
 
 
 		<div class="banner blue1 animel">
@@ -177,10 +156,15 @@
 		</ul>
 
 
+		<article>
+		<h2 class="centered">Cases And Presentations</h2>
+		{% include bloglist.html %}
+		</article>
 
 
 
 	{% include footer.html %}
+	{% include header.html %}
 	{% include scripts.html %}
 	</body>
 </html>
