--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -1,6 +1,38 @@
+@mixin blogLink {
+	& {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		font-weight: bold;
+		width: $ratio*$ratio*10rem;
+		padding: 1rem;
+		background: url('../assets/photo2-orange.jpg') center/cover no-repeat;
+		position: relative;
+		transition: all .6s ease-in-out;
+		outline: 2px solid transparent;
+	}
+
+	&,
+	&:link,
+	&:hover,
+	&:active,
+	&:visited {
+		text-decoration: none;
+		color: #fff;
+	}
+
+	&:hover {
+		outline-color: $orange;
+	}
+	&:focus,
+	&:active {
+		top: 1px;
+		transition: all .2s ease-in-out;
+	}
+}
+
 .blog-list {
 	text-align: center;
-	font-weight: bold;
 	font-size: $ratio*1rem;
 	line-height: $tight;
 	display: flex;
@@ -16,40 +48,18 @@
 		margin: 0 .5rem 1rem .5rem;
 
 		a {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
+			@include blogLink;
 			width: $ratio*10rem;
 			height: $ratio*10rem;
-			padding: 1rem;
-			background: url('../assets/photo1-orange.jpg') center/cover no-repeat;
-			position: relative;
-			transition: all .6s ease-in-out;
-			outline: 2px solid transparent;
 		}
-
+		&:nth-child(odd) a {
+			background-image: url('../assets/photo1-orange.jpg');
+		}
 		&:nth-child(even) a {
 			background-image: url('../assets/photo2-blue.jpg');
 		}
-
-		a,
-		a:link,
-		a:hover,
-		a:active,
-		a:visited {
-			text-decoration: none;
-			color: #fff;
-		}
-
-		a:hover {
-			outline-color: $orange;
-		}
 		&:nth-child(even) a:hover {
 			outline-color: $blue;
-		}
-		a:active {
-			top: 1px;
-			transition: all .2s ease-in-out;
 		}
 
 		transition: all .6s ease-out;
@@ -71,5 +81,26 @@
 	a {
 		height: auto;
 		width: $ratio*$ratio*10rem;
+	}
+}
+
+a.bloglink {
+	@include blogLink;
+	&::after {
+		content: "";
+		position: absolute;
+		border: 1rem solid transparent;
+		border-left-color: $orange;
+		top: 50%;
+		width: 0;
+		height: 0;
+		right: 0;
+		margin-top: -1rem;
+		transition: border-color .6s ease-in-out;
+	}
+	&:hover::after,
+	&:focus::after,
+	&:active::after {
+		border-left-color: white;
 	}
 }
