--- a/_sass/headers.scss
+++ b/_sass/headers.scss
@@ -44,16 +44,25 @@ header {
 			margin-top: $ratio*$ratio*$ratio*1rem;
 			li {
 				display: inline-block;
-			}
-			li + li {
-				margin-left: $ratio*$ratio*$ratio*1rem;
+				@media screen and (max-width: $breakpoint-small) {
+					display: block;
+				}
+				margin-left: ($ratio*$ratio*$ratio)/2*1rem;
+				margin-right: ($ratio*$ratio*$ratio)/2*1rem;
 			}
 			.secondary {
 				font-size: 1rem;
 			}
 		}
-	}
 
+		@media screen and (max-width: $breakpoint) {
+			padding-top: $ratio*$ratio*1rem;
+			padding-bottom: $ratio*1rem;
+			img {
+				max-width: 80vw;
+			}
+		}
+	}
 }
 
 .small-header nav {
@@ -63,6 +72,7 @@ header {
 	width: 100%;
 	padding: 1rem/$ratio 1rem*$ratio 1rem/$ratio 1rem/$ratio;
 	top: 0;
+	line-height: 2rem;
 
 	&::after {
 	    content: "";
@@ -85,7 +95,7 @@ header {
 	}
 
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 
 	> a:first-child,
 	img {
@@ -122,4 +132,61 @@ header {
 
 .page {
 	padding-top: 1rem*$ratio*$ratio + 1rem/$ratio;
+}
+
+.menu-toggle {
+	display: none;
+	width: 1rem;
+	height: 2rem;
+	border: none;
+	background: transparent;
+	padding: 0;
+	-webkit-appearance: none;
+}
+
+@media screen and (max-width: $breakpoint) {
+	.small-header {
+		nav {
+			display: block;
+			height: $ratio*$ratio*1rem + 1rem/$ratio;
+			img {
+				position: absolute;
+				top: 1rem/$ratio;
+				left: 1rem/$ratio;
+			}
+
+			ul {
+				display: none;
+				margin-bottom: 1rem*$ratio;
+				margin-left: $ratio*$ratio*1rem;;
+			}
+			li {
+				display: block;
+				margin: 0;
+				+ li {
+					margin: 0;
+				}
+			}
+		}
+		&.active {
+			nav {
+				top: 0;
+				bottom: 5px;
+				height: auto;
+				padding-top: 1rem*$ratio*$ratio*$ratio;
+			}
+			ul {
+				display: block;
+			}
+			.secondary {
+				float: none;
+			}
+		}
+	}
+	.menu-toggle {
+		display: block;
+		position: absolute;
+		top: 1rem/$ratio;
+		right: 1rem/$ratio;
+	}
 }
