--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -6,11 +6,29 @@
 		font-weight: bold;
 		width: $ratio*$ratio*10rem;
 		max-width: 100%;
-		padding: 1rem;
+		padding: 1rem*$ratio;
 		background: url('../assets/photo2-orange.jpg') center/cover no-repeat;
 		position: relative;
 		transition: all .6s ease-in-out;
 		outline: 2px solid transparent;
+
+		&::after {
+			content: "";
+			position: absolute;
+			border: 1rem solid transparent;
+			border-left-color: $orange;
+			top: 50%;
+			width: 0;
+			height: 0;
+			right: 0;
+			margin-top: -1rem;
+			transition: border-color .6s ease-in-out;
+		}
+		&:hover::after,
+		&:focus::after,
+		&:active::after {
+			border-left-color: white;
+		}
 	}
 
 	&,
@@ -29,6 +47,12 @@
 	&:active {
 		top: 1px;
 		transition: all .2s ease-in-out;
+	}
+	> span {
+		display: block;
+		font-weight: normal;
+		font-size: 1em/$tight;
+		margin-top: 1em/$ratio;
 	}
 }
 
@@ -58,9 +82,15 @@
 		}
 		&:nth-child(even) a {
 			background-image: url('../assets/photo2-blue.jpg');
+			&::after {
+				border-left-color: $blue;
+			}
 		}
 		&:nth-child(even) a:hover {
 			outline-color: $blue;
+			&::after {
+				border-left-color: #fff;
+			}
 		}
 
 		transition: all .6s ease-out;
@@ -87,21 +117,37 @@
 
 a.bloglink {
 	@include blogLink;
-	&::after {
-		content: "";
-		position: absolute;
-		border: 1rem solid transparent;
-		border-left-color: $orange;
-		top: 50%;
-		width: 0;
-		height: 0;
-		right: 0;
-		margin-top: -1rem;
-		transition: border-color .6s ease-in-out;
+}
+
+
+.blog h1 {
+	margin-bottom: 0;
+}
+.blog dl {
+	margin: 0 auto $ratio*$ratio*1rem auto;
+
+	> *,
+	ul,
+	li {
+		display: inline-block;
+		margin: 0;
 	}
-	&:hover::after,
-	&:focus::after,
-	&:active::after {
-		border-left-color: white;
+	dt {
+		color: $grey3;
+		font-style: italic;
+	}
+	dt.date {
+		display: none;
+	}
+	dt::after {
+		content: ":";
+	}
+	dd {
+		margin-right: 1rem;
+	}
+	li {
+		&:not(:last-child)::after {
+			content: ","
+		}
 	}
 }
