--- a/_includes/bloglist.html
+++ b/_includes/bloglist.html
@@ -1,5 +1,14 @@
 <ul class="blog-list">
 	{% for post in site.posts %}
-	<li class="animel"><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
+	<li class="animel">
+		<a href="{{ post.url | relative_url }}">
+			{{ post.title }}
+			{% if post.author and post.date %}
+				<span>By {{ post.author }}, {{ post.date | date_to_string }}</span>
+			{% else if post.date %}
+				<span>{{ post.date | date_to_string }}</span>
+			{% endif %}
+		</a>
+	</li>
 	{% endfor %}
 </ul>
