--- a/_layouts/blogpage.html
+++ b/_layouts/blogpage.html
@@ -16,6 +16,9 @@
 		<article>
 			<h1>{{ page.title }}</h1>
 			<dl class="blog-meta">
+				<dt class="date">Date</dt>
+				<dd>{{ page.date | date_to_string }}</dd>
+
 				{% if page.author %}
 					<dt class="author">By</dt>
 					<dd>{{ page.author }}</dd>
