--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 
 	<link rel="icon" href="{{ 'favicon.ico' | relative_url }}">
 
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+	<link rel="stylesheet" href="{{ 'src/normalize.css' | relative_url }}">
+	<link rel="stylesheet" href="{{ 'src/swiper.min.css' | relative_url }}">
 	<link rel="stylesheet" href="{{ 'src/main.css' | relative_url }}">
 </head>
