--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,1 +1,2 @@
 <script src="{{ 'src/main.js' | relative_url }}" type="text/javascript"></script>
+<script src="{{ 'src/swiper.min.js' | relative_url }}" type="text/javascript"></script>
