fix slideshow layout for all aspect ratios

--- a/_sass/slideshow.scss
+++ b/_sass/slideshow.scss
@@ -3,10 +3,17 @@
 	height: 60vh;
 	background: $orange;
 
+
 	.swiper-slide {
 		text-align: center;
 	}
-	img {
+	.slide-image {
+		display: inline-block;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		height: 100%;
+		width: 100%;
 		max-width: $breakpoint;
 	}
 	.swiper-pagination-bullet-active {
