--- a/_includes/slideshow.html
+++ b/_includes/slideshow.html
@@ -3,7 +3,7 @@
 
 		{% for slide in page.slides %}
 		<div class="swiper-slide">
-			<img src="{{ slide | relative_url }}">
+			<div class="slide-image" style="background-image: url({{ slide | relative_url }});"></div>
 		</div>
 		{% endfor %}
 
