add live anchor index for blogpost

--- a/_layouts/blogpage.html
+++ b/_layouts/blogpage.html
@@ -49,6 +49,10 @@
 			{% include bloglist.html %}
 		</aside>
 
+		<ul id="anchor-list" aria-hidden="true">
+			<a href="#">{{ page.title }}</a>
+		</ul>
+
 		{% include footer.html %}
 		{% include header.html %}
 		{% include scripts.html %}
