--- a/src/main.scss
+++ b/src/main.scss
@@ -73,10 +73,22 @@ h1 {
 }
 h2 {
 	font-size: 1em*$ratio;
-	margin: 1em*$ratio*$ratio 0 1em/$ratio/$ratio 0;
+	margin: 0 0 1em/$ratio/$ratio 0;
+	padding-top: 1em*$ratio*$ratio;
+	position: relative;
 	&.centered {
 		color: $grey5;
 		text-align: center;
+	}
+	&:target::before {
+		content: "";
+		background: $blue;
+		display: block;
+		width: 2px;
+		height: $ratio*1em;
+		position: absolute;
+		left: -1rem;
+		bottom: 0;
 	}
 }
 h3 {
